--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@prisma/client": "^7.2.0",
+    "@prisma/config": "^7.2.0",
+    "@supabase/supabase-js": "^2.90.1",
     "@tailwindcss/postcss": "^4.1.18",
+    "dotenv": "^17.2.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-medium-image-zoom": "^5.4.0",
     "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
@@ -30,6 +35,7 @@
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
+    "tsx": "^4.21.0",
     "vite": "^7.2.4"
   }
 }
